fix relative paths

--- a/404.html
+++ b/404.html
@@ -12,13 +12,13 @@
     <title>SBP 2015</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../assets/css/bootstrap.css" rel="stylesheet">
+    <link href="assets/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../assets/css/style.css" rel="stylesheet">
-    <link href="../assets/css/font-awesome.min.css" rel="stylesheet">
-    <link href="../assets/js/fancybox/jquery.fancybox.css" rel="stylesheet" />
-    <link href="../assets/css/parallax-slider.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="assets/css/font-awesome.min.css" rel="stylesheet">
+    <link href="assets/js/fancybox/jquery.fancybox.css" rel="stylesheet" />
+    <link href="assets/css/parallax-slider.css" rel="stylesheet">
 
 
     <!-- Just for debugging purposes. Don't actually copy this line! -->
@@ -47,16 +47,16 @@
                     <li class="dropdown hidden-xs">
 			          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Information <span class="caret"></span></a>
 			          <ul class="dropdown-menu" role="menu">
-						<li><a href="../awards">Awards</a></li>
-                        <li><a href="../cfp/">Call for Papers</a></li>
-                        <li><a href="../cft/">Call for Tutorials</a></li>
-                        <li><a href="../committee/">Committee</a></li>
-                        <li><a href="../downloads/">Downloads</a></li>
-                        <li><a href="../links/">Links</a></li>
-                        <li><a href="../publishersTable/">Publishers' Table</a></li>
-                        <li><a href="../registration/">Registration</a></li>
-                        <li><a href="../sponsors/">Sponsors</a></li>
-                        <li><a href="../travel/">Travel</a></li>
+						<li><a href="awards">Awards</a></li>
+                        <li><a href="cfp/">Call for Papers</a></li>
+                        <li><a href="cft/">Call for Tutorials</a></li>
+                        <li><a href="committee/">Committee</a></li>
+                        <li><a href="downloads/">Downloads</a></li>
+                        <li><a href="links/">Links</a></li>
+                        <li><a href="publishersTable/">Publishers' Table</a></li>
+                        <li><a href="registration/">Registration</a></li>
+                        <li><a href="sponsors/">Sponsors</a></li>
+                        <li><a href="travel/">Travel</a></li>
 			          </ul>
 			        </li>
 			        <li class="dropdown hidden-xs">
