--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <title>SBP 2015</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../assets/css/bootstrap.css" rel="stylesheet">
+    <link href="assets/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../assets/css/style.css" rel="stylesheet">
-    <link href="../assets/css/font-awesome.min.css" rel="stylesheet">
-    <link href="../assets/js/fancybox/jquery.fancybox.css" rel="stylesheet" />
-    <link href="../assets/css/parallax-slider.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="assets/css/font-awesome.min.css" rel="stylesheet">
+    <link href="assets/js/fancybox/jquery.fancybox.css" rel="stylesheet" />
+    <link href="assets/css/parallax-slider.css" rel="stylesheet">
 
 
     <!-- Just for debugging purposes. Don't actually copy this line! -->
@@ -47,16 +47,16 @@
                     <li class="dropdown hidden-xs">
 			          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Information <span class="caret"></span></a>
 			          <ul class="dropdown-menu" role="menu">
-						<li><a href="../awards">Awards</a></li>
-                        <li><a href="../cfp/">Call for Papers</a></li>
-                        <li><a href="../cft/">Call for Tutorials</a></li>
-                        <li><a href="../committee/">Committee</a></li>
-                        <li><a href="../downloads/">Downloads</a></li>
-                        <li><a href="../links/">Links</a></li>
-                        <li><a href="../publishersTable/">Publishers' Table</a></li>
-                        <li><a href="../registration/">Registration</a></li>
-                        <li><a href="../sponsors/">Sponsors</a></li>
-                        <li><a href="../travel/">Travel</a></li>
+						<li><a href="awards">Awards</a></li>
+                        <li><a href="cfp/">Call for Papers</a></li>
+                        <li><a href="cft/">Call for Tutorials</a></li>
+                        <li><a href="committee/">Committee</a></li>
+                        <li><a href="downloads/">Downloads</a></li>
+                        <li><a href="links/">Links</a></li>
+                        <li><a href="publishersTable/">Publishers' Table</a></li>
+                        <li><a href="registration/">Registration</a></li>
+                        <li><a href="sponsors/">Sponsors</a></li>
+                        <li><a href="travel/">Travel</a></li>
 			          </ul>
 			        </li>
 			        <li class="dropdown hidden-xs">
@@ -116,7 +116,7 @@
 
                         <p>2015 International Social Computing, Behavioral-Cultural Modeling and Prediction Conference (SBP15)<br />March 31-April 3, 2015</p>
                         <a href="/about" class="da-link">Read more</a>
-                        <div class="da-img" style="margin-left: -150px"><img src="/assets/img/mapa.png" alt="image03" /></div>
+                        <div class="da-img" style="margin-left: -150px"><img src="assets/img/mapa.png" alt="image03" /></div>
                     </div>
                     <div class="da-slide">
                         <h2>Tutorials</h2>
@@ -124,7 +124,7 @@
                             Conference March 31, 2015
                         </p>
                         <a href="/tutorial" class="da-link">Read more</a>
-                        <div class="da-img" style="margin-left: 50px;"><br /><br /><br /><br /><img src="/assets/img/alpa.png" alt="image04" /></div>
+                        <div class="da-img" style="margin-left: 50px;"><br /><br /><br /><br /><img src="assets/img/alpa.png" alt="image04" /></div>
                     </div>
                     <div class="da-slide">
                         <h2>Main Conference</h2>
@@ -132,7 +132,7 @@
                             Conference April 1-3, 2015
                         </p>
                         <a href="/program" class="da-link">Read more</a>
-                        <div class="da-img" style="margin-left: 50px;"><br /><br /><br /><br /><img src="/assets/img/cfpa.png" alt="image04" /></div>
+                        <div class="da-img" style="margin-left: 50px;"><br /><br /><br /><br /><img src="assets/img/cfpa.png" alt="image04" /></div>
                     </div>
                     <nav class="da-arrows">
                         <span class="da-arrows-prev"></span>
@@ -213,12 +213,12 @@
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 					<div class="flex-video widescreen">
-                        <img src="/assets/img/studentsupport.jpg" class="img-thumbnail" />
+                        <img src="assets/img/studentsupport.jpg" class="img-thumbnail" />
                         <p class="captions">Awardees</p>
                     </div>
                     <br />
                     <div class="flex-video widescreen">
-                        <img src="/assets/img/awards.jpg" class="img-thumbnail" />
+                        <img src="assets/img/awards.jpg" class="img-thumbnail" />
                         <p class="captions">Roundtable Discussions</p>
                     </div>
 				</div>
@@ -237,21 +237,21 @@
 				<h1>Publication</h1>
 				<div class="col-lg-4 col-md-4 col-sm-4 proc">
 					<a href="http://www.springer.com/computer/general+issues/book/978-3-319-16267-6">
-						<img src="/assets/img/cover/sbp2015_cover.png" width="200" />
+						<img src="assets/img/cover/sbp2015_cover.png" width="200" />
 					</a>
 					<h3>2015</h3>
 					<p>&nbsp;</p>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-4 proc">
 					<a href="http://www.springer.com/us/book/9783319055787">
-						<img src="/assets/img/cover/sbp2014_cover.png" width="200" />
+						<img src="assets/img/cover/sbp2014_cover.png" width="200" />
 					</a>
 					<h3>2014</h3>
 					<p>&nbsp;</p>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-4 proc">
 					<a href="http://www.springer.com/us/book/9783642372094">
-						<img src="/assets/img/cover/sbp2013_cover.png" width="200" />
+						<img src="assets/img/cover/sbp2013_cover.png" width="200" />
 					</a>
 					<h3>2013</h3>
 					<p>&nbsp;</p>
