asset relative path

--- a/about/index.html
+++ b/about/index.html
@@ -107,7 +107,14 @@
     <div id="portfoliowrap">
         <div class="container">
             <div class="row mt">
-            
+                        <div class="title">
+                <h3>Student Travel Scholarship</h3>
+            </div>
+
+            <p>
+                1. Please fill out the <a href="https://docs.google.com/forms/d/1EpAjsQ6ihjyln7SPDRp_sCUYip_GGkg_maW3CPB-kKs/viewform" target="_blank">SBP 2015 Student Travel Award Application</a> before <b>Feb 26th</b>. <br/>
+                2. In addition to the application, every student is also required to submit a faculty support letter.  Please send these to <a href="mailto:sbp15sta@gmail.com">sbp15sta@gmail.com</a>.
+            </p>
                 <h3>
                     2015 International Conference on Social Computing, Behavioral-Cultural Modeling, & Prediction (SBP15)<br />
                     March 31 – April 3, 2015, UCDC Center,  Washington DC, USA 
@@ -281,15 +288,15 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/classie.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/smoothscroll.js"></script>
-    <script src="assets/js/jquery.stellar.min.js"></script>
-    <script src="assets/js/fancybox/jquery.fancybox.js"></script>
-    <script src="assets/js/main.js"></script>
-    <script src="assets/js/slider.js"></script>
-    <script src="assets/js/jquery.cslider.js"></script>
+    <script src="../assets/js/jquery.min.js"></script>
+    <script src="../assets/js/classie.js"></script>
+    <script src="../assets/js/bootstrap.min.js"></script>
+    <script src="../assets/js/smoothscroll.js"></script>
+    <script src="../assets/js/jquery.stellar.min.js"></script>
+    <script src="../assets/js/fancybox/jquery.fancybox.js"></script>
+    <script src="../assets/js/main.js"></script>
+    <script src="../assets/js/slider.js"></script>
+    <script src="../assets/js/jquery.cslider.js"></script>
 
         <script>
         $(function(){
