--- a/awards/index.html
+++ b/awards/index.html
@@ -279,15 +279,15 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/classie.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/smoothscroll.js"></script>
-    <script src="assets/js/jquery.stellar.min.js"></script>
-    <script src="assets/js/fancybox/jquery.fancybox.js"></script>
-    <script src="assets/js/main.js"></script>
-    <script src="assets/js/slider.js"></script>
-    <script src="assets/js/jquery.cslider.js"></script>
+    <script src="../assets/js/jquery.min.js"></script>
+    <script src="../assets/js/classie.js"></script>
+    <script src="../assets/js/bootstrap.min.js"></script>
+    <script src="../assets/js/smoothscroll.js"></script>
+    <script src="../assets/js/jquery.stellar.min.js"></script>
+    <script src="../assets/js/fancybox/jquery.fancybox.js"></script>
+    <script src="../assets/js/main.js"></script>
+    <script src="../assets/js/slider.js"></script>
+    <script src="../assets/js/jquery.cslider.js"></script>
 
         <script>
         $(function(){
