spruce up about page with image

--- a/about/index.html
+++ b/about/index.html
@@ -107,18 +107,13 @@
     <div id="portfoliowrap">
         <div class="container">
             <div class="row mt">
-                        <div class="title">
-                <h3>Student Travel Scholarship</h3>
-            </div>
-
-            <p>
-                1. Please fill out the <a href="https://docs.google.com/forms/d/1EpAjsQ6ihjyln7SPDRp_sCUYip_GGkg_maW3CPB-kKs/viewform" target="_blank">SBP 2015 Student Travel Award Application</a> before <b>Feb 26th</b>. <br/>
-                2. In addition to the application, every student is also required to submit a faculty support letter.  Please send these to <a href="mailto:sbp15sta@gmail.com">sbp15sta@gmail.com</a>.
-            </p>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h3>
                     2015 International Conference on Social Computing, Behavioral-Cultural Modeling, & Prediction (SBP15)<br />
                     March 31 – April 3, 2015, UCDC Center,  Washington DC, USA 
                 </h3>
+                </div>
+                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
 
                 <p>
                     The 2015 International Conference on Social Computing, Behavioral-Cultural Modeling, and Prediction (SBP) is a multidisciplinary conference with a selective single paper track and poster session.  SBP also invites  a small number of high quality tutorials and nationally recognized keynote speakers. 
@@ -135,12 +130,15 @@
                     The SBP Proceedings have been in the 25% most downloaded ebooks for three consecutive years on SpringLink.
                     <br/><br/>
                     <ul class="square_list">
-                        <li>2013: Since its online publication on March 02, 2013, there has been a total of 51633 chapter downloads.</li>
-                        <li>2012: Since its online publication on March 20, 2012, there has been a total of 15037 chapter downloads.</li>
-                        <li>2011: Since its online publication on February 22, 2011, there has been a total of 17381 chapter downloads.</li>
+                        <li>2013: Since its online publication on March 02, 2013, over 51633 chapter downloads.</li>
+                        <li>2012: Since its online publication on March 20, 2012, over 15037 chapter downloads.</li>
+                        <li>2011: Since its online publication on February 22, 2011, over 17381 chapter downloads.</li>
                     </ul>
                 </p>
-
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    <img src="../assets/img/cover/sbp2015_cover.png" class="img-responsve img-thumbnail" />
+                </div>
             </div><!-- /row -->
         </div><!-- /container -->
     </div><!-- /aboutwrap -->
