--- a/keynote/index.html
+++ b/keynote/index.html
@@ -131,8 +131,12 @@
 
                 <hr style="border:1px dotted #efefee "/>
 
-
-                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 col-lg-offset-3 col-md-offset-3 col-sm-offset-3 col-xs-offset-3">
+                <div class="row">
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+                    <br/>
+                    <img src="photo/newman.jpg" class="img-responsive" />
+                </div>
+                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
                     <h2>Mark Newman,  PhD</h2>
                     <h3><small>Paul Dirac Collegiate Professor of Physics, Department of Physics and Center for the Study of Complex Systems, University of Michigan -- Ann Arbor</small> </h3>
                     <p> 
@@ -145,14 +149,20 @@
                         Diseases spread over networks of physical contact between individuals and the structure of these networks, along with individuals' behavior and the biological properties of diseases, dictate patterns of disease spread, risk of infection, sizes of outbreaks, and many other epidemiological quantities.  With the help of epidemiological models and a little network theory, this talk will discuss the origins of the wide range of outcomes that can come about when a disease spreads through a population.  Important effects include network homophily and "superspreaders", the rate of change of people's contact patterns versus the rate of spread of the disease, the presence of other diseases in the same population, and the effects of long-range travel in carrying diseases from one place to another.
                     </p>
                 </div>
+                </div>
 
                 <hr style="border:1px dotted #efefee "/>
-
-                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 col-lg-offset-3 col-md-offset-3 col-sm-offset-3 col-xs-offset-3">
+                
+                <div class="row">
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+                    <br/>
+                    <img src="photo/bourne.jpg" class="img-responsive" />
+                </div>
+                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
                     <h2>Phil Bourne, PhD</h2>
                     <h3><small>Associate Director for Data Science, National Institutes of Health</small> </h3>
                     <p> 
-                        <!--bio-->
+                        Philip E. Bourne PhD is the Associate Director for Data Science (ADDS) at the National Institutes of Health. Formally he was Associate Vice Chancellor for Innovation and Industry Alliances, a Professor in the Department of Pharmacology and Skaggs School of Pharmacy and Pharmaceutical Sciences at the University of California San Diego,  Associate Director of the RCSB Protein Data Bank and an Adjunct Professor at the Sanford Burnham Institute.
                     </p>
                     <p>
                         <b><!--title--></b>
@@ -161,9 +171,11 @@
                         <!--abstract-->
                     </p>
                 </div>
+                </div>
 
                 <hr style="border:1px dotted #efefee "/>
 
+                <div class="row">
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
                     <br/>
                     <img src="photo/cohn.png" class="img-responsive" />
@@ -181,7 +193,7 @@
                         <!--abstract-->
                     </p>
                 </div>
-
+                </div>
 
             </div>
         </div><!-- /container -->
