--- a/challenge/index.html
+++ b/challenge/index.html
@@ -68,7 +68,7 @@
                             <li><a href="/tutorial">Tutorials</a></li>
                         </ul>
                     </li>
-                    <li class="hidden-xs"><a href="challenge/index.html" class="smoothScroll">Challenge</a></li>
+                    <li class="hidden-xs"><a href="/challenge" class="smoothScroll">Challenge</a></li>
                     <li class="hidden-lg hidden-md hidden-sm">
                         <!-- Menu -->
                         <nav class="menu" id="theMenu">
