--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
                     <p>The SBP conference provides a forum for researchers and practitioners from academia, industry, and government agencies to exchange ideas on current challenges in social computing, behavioral modeling and prediction, and on state-of-the-art methods and best practices being adopted to tackle these challenges. Interactive events at the conference are designed to promote cross-disciplinary contact.</p>
                     <p><b>Social Computing</b> harnesses the power of computational methods to study social behavior within a social context. <b>Behavioral-Cultural  modeling</b> refers to representing behavior and culture in the abstract, and is a convenient and powerful way to conduct virtual experiments and scenario analysis. Both social computing and behavioralcultural  modeling are techniques designed to achieve a better understanding of complex behaviors, patterns, and associated outcomes of interest. Moreover, these approaches are inherently interdisciplinary; subsystems and system components exist at multiple levels of analysis (i.e., "cells to societies") and across multiple disciplines, from engineering and the computational sciences to the social and health sciences. </p>
                     <p>
+
                     <h3>IMPORTANT DATES:</h3>
                     Paper Registration Deadline:       November 7, 2014 (11:59pm, EST)<br />
                     Full Paper/Poster Submission:     November 14, 2014 (11:59pm, EST)<br />
@@ -224,13 +225,27 @@
 				</div>
 			</div><! --/row -->
 
-			<div class="row mt">
-			  <div class="col-lg-12 col-md-12 col-sm-12 service">
-			    <p class="text-center">Read more about us on the <a href="/about/">About Us</a> page.</p>
-			  </div>
-			</div>
 		</div><!--/container -->
-
+    </div>
+    <div id="brimswrap">
+        <section id="brims" name="brims"></section>
+        <div class="container" style="background-color:#eee;">
+            <div class="row centered">
+                <div class="col-lg-8 col-md-8 col-sm-8 topic">
+                    <br/>
+                    <p>
+                        SBP is co-locating with <a href="http://cc.ist.psu.edu/BRIMS2015/">24th Conference on Behavior Representation in Modeling and Simulation</a> this year. Registration for SBP Conference covers entrance to BRiMS.
+                    </p>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 proc">
+                    <a href="http://cc.ist.psu.edu/BRIMS2015/">
+                        <img src="/static/img/Brims-logo.png" class="img-responsive img-thumbnail">
+                    </a>
+                </div>
+            </div><! --/row -->
+        </div><! --/container -->
+    </div>
+    <div id="publicationwrap">
 		<section id="program" name="program"></section>
 		<div class="container">
 			<div class="row mt centered">
@@ -259,6 +274,7 @@
 
 			</div><! --/row -->
 		</div><! --/container -->
+
 	</div><! --/Portfoliowrap -->
 
 
