improve program for small screens

--- a/program/index.html
+++ b/program/index.html
@@ -125,8 +125,8 @@
             <div class="row">
                 <h3>Wednesday, April 1</h3>
                 <table class="table table-bordered" style="background: #fff">
-                    <tr class="active"><th width="200">Time</th>
-                        <th><small>Talk</small></th>
+                    <tr class="active"><th width="150">Time</th>
+                        <th><small>Sessions</small></th>
                     </tr>
                     <tr><td>Session 1 (SBP) <br/> 8:30am</td>
                         <td>
@@ -252,8 +252,8 @@
             <div class="row mt">
                 <h3>Thursday, April 2</h3>
                 <table class="table table-bordered" style="background: #fff">
-                    <tr class="active"><th width="200">Time</th>
-                        <th><small>Talk</small></th>
+                    <tr class="active"><th width="150">Time</th>
+                        <th><small>Sessions</small></th>
                     </tr>
                     <tr><td>Session 4 (SBP) <br/> 8:30am</td>
                         <td>
@@ -356,8 +356,8 @@
             <div class="row mt">
                 <h3>Friday, April 3</h3>
                 <table class="table table-bordered" style="background: #fff">
-                    <tr class="active"><th width="200">Time</th>
-                        <th><small>Talk</small></th>
+                    <tr class="active"><th width="150">Time</th>
+                        <th><small>Sessions</small></th>
                     </tr>
                     <tr><td>Session 6 (SBP) <br/> 8:30am</td>
                         <td>
