--- a/keynote/index.html
+++ b/keynote/index.html
@@ -122,10 +122,10 @@
                     <h2>Scott Page, PhD</h2>
                     <h3><small>Leonid Hurwicz Collegiate Professor of Complex Systems, Political Science, and Economics, The University of Michigan - Ann Arbor</small></h3>
                     <p>
-                    Scott E Page is Leonid Hurwicz Collegiate Professor of Complex Systems, Political Science, and Economics at the University of Michigan, where he also directs the Center for the Study of Complex Systems, and an external faculty member of the Santa Fe Institute.  Scott’s research focuses on complex systems and in particular on the importance of diversity.   He is the author of three books, more than seventy scientific research papers in multiple fields.  He has been awarded a Guggenheim Fellowship and a fellowship at the Center for Advanced Studies in the Behavioral Sciences.  He is also an elected fellow of the American Academy of Arts and Sciences. 
+                    Bio: Scott E Page is Leonid Hurwicz Collegiate Professor of Complex Systems, Political Science, and Economics at the University of Michigan, where he also directs the Center for the Study of Complex Systems, and an external faculty member of the Santa Fe Institute.  Scott’s research focuses on complex systems and in particular on the importance of diversity.   He is the author of three books, more than seventy scientific research papers in multiple fields.  He has been awarded a Guggenheim Fellowship and a fellowship at the Center for Advanced Studies in the Behavioral Sciences.  He is also an elected fellow of the American Academy of Arts and Sciences. 
                     </p>
                     <p>
-                        <b>Something Beyond Belief: Behavioral Models of Culture</b>
+                        Talk title: <b>Something Beyond Belief: Behavioral Models of Culture</b>
                     </p>
                 </div>
 
@@ -140,13 +140,13 @@
                     <h2>Mark Newman,  PhD</h2>
                     <h3><small>Paul Dirac Collegiate Professor of Physics, Department of Physics and Center for the Study of Complex Systems, University of Michigan -- Ann Arbor</small> </h3>
                     <p> 
-                        Mark Newman received a Ph.D. in physics from the University of Oxford in 1991 and conducted postdoctoral research at Cornell University before joining the staff of the Santa Fe Institute, a think-tank in New Mexico devoted to the study of complex systems.  In 2002 he left Santa Fe for the University of Michigan, where he is currently the Paul A. M. Dirac Professor of Physics and a professor in the university's Center for the Study of Complex Systems.  Professor Newman is a Fellow of the AAAS and the American Physical Society and the author of over 150 scientific publications and six books, including "Networks", an introduction to the field of network theory, and "The Atlas of the Real World", a popular book on cartography.  His research centers on social and information networks.
+                        Bio: Mark Newman received a Ph.D. in physics from the University of Oxford in 1991 and conducted postdoctoral research at Cornell University before joining the staff of the Santa Fe Institute, a think-tank in New Mexico devoted to the study of complex systems.  In 2002 he left Santa Fe for the University of Michigan, where he is currently the Paul A. M. Dirac Professor of Physics and a professor in the university's Center for the Study of Complex Systems.  Professor Newman is a Fellow of the AAAS and the American Physical Society and the author of over 150 scientific publications and six books, including "Networks", an introduction to the field of network theory, and "The Atlas of the Real World", a popular book on cartography.  His research centers on social and information networks.
                     </p>
                     <p>
-                        <b>Contact networks, behavior, and the spread of disease</b>
+                        Talk title: <b>Contact networks, behavior, and the spread of disease</b>
                     </p>
                     <p>
-                        Diseases spread over networks of physical contact between individuals and the structure of these networks, along with individuals' behavior and the biological properties of diseases, dictate patterns of disease spread, risk of infection, sizes of outbreaks, and many other epidemiological quantities.  With the help of epidemiological models and a little network theory, this talk will discuss the origins of the wide range of outcomes that can come about when a disease spreads through a population.  Important effects include network homophily and "superspreaders", the rate of change of people's contact patterns versus the rate of spread of the disease, the presence of other diseases in the same population, and the effects of long-range travel in carrying diseases from one place to another.
+                        Abstract: Diseases spread over networks of physical contact between individuals and the structure of these networks, along with individuals' behavior and the biological properties of diseases, dictate patterns of disease spread, risk of infection, sizes of outbreaks, and many other epidemiological quantities.  With the help of epidemiological models and a little network theory, this talk will discuss the origins of the wide range of outcomes that can come about when a disease spreads through a population.  Important effects include network homophily and "superspreaders", the rate of change of people's contact patterns versus the rate of spread of the disease, the presence of other diseases in the same population, and the effects of long-range travel in carrying diseases from one place to another.
                     </p>
                 </div>
                 </div>
@@ -162,7 +162,7 @@
                     <h2>Phil Bourne, PhD</h2>
                     <h3><small>Associate Director for Data Science, National Institutes of Health</small> </h3>
                     <p> 
-                        Philip E. Bourne PhD is the Associate Director for Data Science (ADDS) at the National Institutes of Health. Formally he was Associate Vice Chancellor for Innovation and Industry Alliances, a Professor in the Department of Pharmacology and Skaggs School of Pharmacy and Pharmaceutical Sciences at the University of California San Diego,  Associate Director of the RCSB Protein Data Bank and an Adjunct Professor at the Sanford Burnham Institute.
+                        Bio: Philip E. Bourne PhD is the Associate Director for Data Science (ADDS) at the National Institutes of Health. Formally he was Associate Vice Chancellor for Innovation and Industry Alliances, a Professor in the Department of Pharmacology and Skaggs School of Pharmacy and Pharmaceutical Sciences at the University of California San Diego,  Associate Director of the RCSB Protein Data Bank and an Adjunct Professor at the Sanford Burnham Institute.
                     </p>
                     <p>
                         <b><!--title--></b>
@@ -184,10 +184,10 @@
                     <h2>CDR Joseph Cohn, PhD</h2>
                     <h3><small>Office of the Secretary of Defense</small></h3>
                     <p> 
-                        Commander Joseph Cohn is currently assigned as Deputy Director to OUSD (AT&L)’s Human Performance Training and BioSystems Directorate. During his previous tour, he served in the Office of Naval Research’s Human and Bioengineered Systems Division, as a Deputy and Program Officer. He also served as ONR’s first Deputy Director of Research, for Science, Technology, Engineering and Mathematics (DDoR-STEM). CDR Cohn’s first assignment was at NAWCTSD Orlando, as the Lead, Training Effectiveness Evaluation for Virtual Environments. He was then assigned to the Naval Research Laboratory, where he established the Warfighter Human Systems Integration Laboratory, directing a staff of 12 in creating new technology development approaches for the Navy, Marine Corps and Army. Following this assignment, He served as Deputy PM for ONR’s Virtual Technologies & Environments program, responsible for developing & transitioning modeling & simulation - based training technologies. Following that tour, he was the Chief of Naval Personnel's Head, Strategy & Concepts Branch. Following this assignment, he was a Program Manager at the Defense Advanced Research Projects Agency directing basic & applied research projects that delivered cutting edge biomedical and information technology products.
+                        Bio: Commander Joseph Cohn is currently assigned as Deputy Director to OUSD (AT&L)’s Human Performance Training and BioSystems Directorate. During his previous tour, he served in the Office of Naval Research’s Human and Bioengineered Systems Division, as a Deputy and Program Officer. He also served as ONR’s first Deputy Director of Research, for Science, Technology, Engineering and Mathematics (DDoR-STEM). CDR Cohn’s first assignment was at NAWCTSD Orlando, as the Lead, Training Effectiveness Evaluation for Virtual Environments. He was then assigned to the Naval Research Laboratory, where he established the Warfighter Human Systems Integration Laboratory, directing a staff of 12 in creating new technology development approaches for the Navy, Marine Corps and Army. Following this assignment, He served as Deputy PM for ONR’s Virtual Technologies & Environments program, responsible for developing & transitioning modeling & simulation - based training technologies. Following that tour, he was the Chief of Naval Personnel's Head, Strategy & Concepts Branch. Following this assignment, he was a Program Manager at the Defense Advanced Research Projects Agency directing basic & applied research projects that delivered cutting edge biomedical and information technology products.
                     </p>
                     <p>
-                        <b>Enhancing Intuitive Decision Making Across Levels: From Individuals to Societies</b>
+                        Talk title: <b>Enhancing Intuitive Decision Making Across Levels: From Individuals to Societies</b>
                     </p>
                     <p>
                         <!--abstract-->
