include brims tutorial

--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -121,12 +121,14 @@
                         </h3>
                     </div>
                     <p>
-                        Morning:<br/>
+                        Morning (SBP):<br/>
                         1. Big Data Analytics for Behavioral Modeling<br/>
                         2. A Tutorial on Text and Network Analysis Methods<br/><br/>
-                        Afternoon:<br/>
+                        Afternoon (SBP):<br/>
                         1. Behavioral Mining, Cultural Differences and Social Network Analysis in Massive Online Games<br/>
-                        2. Introduction to social network and spatial data in R and Python to social scientists
+                        2. Introduction to social network and spatial data in R and Python to social scientists<br/><br/>
+                        Afternoon (BRiMS)<br/>
+                        1. Introduction to Dynamic Network Analysis<br/>
                     </p>
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -408,6 +410,30 @@
                     </p>
                 </div>
             </div><!-- /row -->
+
+            <div class="row mt">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <h3>Introduction to Dynamic Network Analysis</h3>
+                    <p>
+                        <b>Abstract:</b><br/> 
+                        We discuss dynamic network analysis and how it can be useful both for instantiating simulations and for novel simulation outputs. The tutorial focuses on providing attendees grounding in network analysis, allowing attendees to incorporate network data as inputs or as outcomes of their simulation tools. We first introduce key network analysis concepts and statistics including centrality measures and brokerage. To ground these concepts and provide some intuition for thinking about different types of centrality measures, we run a short hands-on analysis of network data in ORA based on intelligence from the Revolutionary War. We then introduce the data structures commonly used in network analysis and help attendees import their own data into ORA. We then introduce attendees to grouping algorithms including clique identification, Concor, and Newman-Girvan. We conclude with additional methodologies to compare networks such as QAP. These methods are particularly useful for comparing simulation inputs and outputs, and inform analysis of simulation outputs. Attendees are encouraged to bring their own data, but sample data will be provided. 
+                    </p>
+                </div>
+                <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+                    <p class="text-center">
+                        <br />
+                    </p>
+                    
+                    <p><b>Presenters</b>: 
+                        Geoffrey Morgan, William Frankenstein and Kathleen Carley<br/>
+                        Carnegie Mellon University, School of Computer Science, Institute for Software Research<br/><br/>
+                    </p>
+                    <p>
+                        <small>
+                        </small>
+                    </p>
+                </div>
+            </div>
         </div><!-- /container -->
     </div><!-- /aboutwrap -->
 
