list BRiMS posters

--- a/program/posters/index.html
+++ b/program/posters/index.html
@@ -382,7 +382,90 @@
                     </tr>
                 </table>
             </div>
-
+            <div class="row mt">
+                <table class="table table-bordered" style="background: #fff">
+                    <tr class="active"><th width="100">BRiMS</th>
+                        <th><small>Poster</small></th>
+                    </tr>
+                    <tr><td>BRiMS 1</td>
+                        <td>
+                        <p><b>Patterns of life in the foreground and background: practical approaches to enhancing simulation-based interaction skills training</b>
+                            <br/>Robert Hubal
+                        </p>
+                        </td>
+                    </tr>
+                    <tr><td>BRiMS 2</td>
+                        <td>
+                        <p><b>A step toward data driven JFO human behavior models</b>
+                            <br/>Stephanie Lackey, Roberto Champney, Gino Fragomeni, Julie Salcedo and Stephen Serge
+                        </p>
+                        </td>
+                    </tr>
+                    <tr><td>BRiMS 6</td>
+                        <td>
+                        <p><b>ACT-R modeling of password entry errors</b>
+                            <br/>Kristen Greene and Franklin Tamborello
+                        </p>
+                        </td>
+                    </tr>
+                    <tr><td>BRiMS 7</td>
+                        <td>
+                        <p><b>Using focus of attention for team behavior classification</b>
+                            <br/>Bradley Wimpey, Craig Lennon and Maryanne Fields
+                        </p>
+                        </td>
+                    </tr>
+                    <tr><td>BRiMS 9</td>
+                        <td>
+                        <p><b>Social network analysis of crowds</b>
+                            <br/>Elizabeth Mezzacappa, Gordon Cooke, Kenneth Short, Charles Sheridan, Gladstone Reid, Kevin Tevis, Robert Demarco, Nasir Jaffery and John Riedener
+                        </p>
+                        </td>
+                    </tr> 
+                    <tr><td>BRiMS 10</td>
+                        <td>
+                        <p><b>Introduction to dynamic network analysis</b>
+                            <br/>Geoffrey Morgan, William Frankenstein and Kathleen Carley
+                        </p>
+                        </td>
+                    </tr>
+                    <tr><td>BRiMS 11</td>
+                        <td>
+                        <p><b>Informing transactive memory through social cognition in agents</b>
+                            <br/>Geoffrey Morgan, Kenneth Joseph and Kathleen Carley
+                        </p>
+                        </td>
+                    </tr>
+                    <tr><td>BRiMS 12</td>
+                        <td>
+                        <p><b>Role of information asymmetry in a public goods game for climate change</b>
+                            <br/>Medha Kumar, Rohit Chouhan and Varun Dutt
+                        </p>
+                        </td>
+                    </tr>
+                    <tr><td>BRiMS 13</td>
+                        <td>
+                        <p><b>Cognitive and probabilistic models of group decision making</b>
+                            <br/>Yuqing Tang, Christian Lebiere, Katia Sycara, Don Morrison and Paul Smart
+                        </p>
+                        </td>
+                    </tr>
+                    <tr><td>BRiMS 14</td>
+                        <td>
+                        <p><b>Individual differences in information processing in networked decision making</b>
+                            <br/>David Hughes, Sibel Adali, Jin-Hee Cho and Jennifer Mangels
+                        </p>
+                        </td>
+                    </tr>
+                    <tr><td>BRiMS 15</td>
+                        <td>
+                        <p><b>Cognitively-inspired context models can improve robot and virtual agent interactive behavior</b>
+                            <br/>Wayne Zachary, Travis Thomas, Andrew Rosoff, Matthew Johnson and Robert Hoffman
+                        </p>
+                        </td>
+                    </tr>
+                </table>
+            </div>
 
         </div><!-- /container -->
     </div><!-- /aboutwrap -->
