--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -114,8 +114,33 @@
                     </h3>
                 </div>
 
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                    <h1>&nbsp;</h1>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    <br/>
+                    <img src="/static/img/aro.jpg" class="img-responsive img-thumbnail" />
+                    <div class="team-name">&nbsp;</div>
+                    <p><br/><br/>
+                        <b>ARO</b><br />
+                        <a href="http://www.arl.army.mil/www/default.cfm?page=29">The Army Research Office</a> (ARO) 
+                        
+                    </p>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    <br/><br/><br/><br/>
+                    <br/>
+                    <img src="../assets/img/onr-Logo.jpg" class="img-responsive img-thumbnail" />
+                    <div class="team-name">&nbsp;</div>
+                    <p><br/><br/>
+                        <b>ONR</b><br />
+                        <a href="http://www.onr.navy.mil/">Office of Naval Research</a> (ONR)
+                    </p>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    <img src="../assets/img/nsf-logo.png" class="img-responsive img-thumbnail" />
+                    <div class="team-name">&nbsp;</div>
+                    <p>
+                        <b>NSF</b><br />
+                        <a href="http://www.nsf.gov">National Science Foundation</a> (NSF)
+                    </p>
                 </div>
         </div><!-- /container -->
     </div><!-- /aboutwrap -->
