Revert "closes sbp-conference/sbp-conference.github.io#7"
This reverts commit fe0cc267d7a1053b550593f1ce737ed5ac9ebf72.

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 					<i class="fa fa-star-o"></i>
                     <h3>Program</h3>
                     <p>
-                        The list of presentations offered on our program is available. <br /><a href="/program">See schedule</a> 
+                        The list of presentations offered on our program will be posted soon. <br /><a href="/program">See schedule</a> 
                     </p>
 				</div><! --/col-lg-3-->
 				<div class="col-lg-3 col-md-3 col-sm-3 box">
