update Dr. Bourne's bio

--- a/keynote/index.html
+++ b/keynote/index.html
@@ -162,7 +162,10 @@
                     <h2>Phil Bourne, PhD</h2>
                     <h3><small>Associate Director for Data Science, National Institutes of Health</small> </h3>
                     <p> 
-                        Bio: Philip E. Bourne PhD is the Associate Director for Data Science (ADDS) at the National Institutes of Health. Formally he was Associate Vice Chancellor for Innovation and Industry Alliances, a Professor in the Department of Pharmacology and Skaggs School of Pharmacy and Pharmaceutical Sciences at the University of California San Diego,  Associate Director of the RCSB Protein Data Bank and an Adjunct Professor at the Sanford Burnham Institute.
+                        Bio: Philip E. Bourne PhD serves as the Associate Director for Data Science (ADDS) at the National Institutes of Health. Formally he was Associate Vice Chancellor for Innovation and Industry Alliances, a Professor in the Department of Pharmacology and Skaggs School of Pharmacy and Pharmaceutical Sciences at the University of California San Diego,  Associate Director of the RCSB Protein Data Bank and an Adjunct Professor at the Sanford Burnham Institute. Dr. Bourne was trained as a physical chemist and obtained his Ph.D. from The Flinders University in South Australia.
+                    </p>
+                    <p>
+                        Dr. Bourne's professional interests focus on relevant biological and educational outcomes derived from computation and scholarly communication. This work involves the use of algorithms, text mining, machine learning, metalanguages, biological databases, and visualization applied to problems in systems pharmacology, evolution, cell signaling, apoptosis, immunology, and scientific dissemination. He has published over 300 papers and five books. He maintains a strong interest in furthering the free dissemination of science through new models of publishing and better integration and subsequent dissemination of data and results.
                     </p>
                     <p>
                         <b><!--title--></b>
