--- a/program/index.html
+++ b/program/index.html
@@ -130,7 +130,7 @@
                     </tr>
                     <tr><td>Session 1 (SBP) <br/> 8:30am</td>
                         <td>
-                        <p><b>Behavioral and Social Sciences and Economics</b></p>
+                        <p><b>Behavioral and Social Sciences and Economics (Session Chair: Wen Dong)</b></p>
                         <p><b>1. A model of policy formation through simulated annealing</b> <br/>
                             <small>
                                 Vincent Kane, Clarence Dillon and Scott Atherly
@@ -213,7 +213,7 @@
                     <tr>
                         <td>Session 3 (SBP) 3:20pm</td>
                         <td>
-                        <p><b>Information, Systems, and Network Science 1</b></p>
+                        <p><b>Information, Systems, and Network Science 1 (Session Chair: Don Adjeroh)</b></p>
                         <p><b>1. Social complexity in the virtual world</b> <br/>
                             <small>
                                 Vincent Kane
@@ -257,7 +257,7 @@
                     </tr>
                     <tr><td>Session 4 (SBP) <br/> 8:30am</td>
                         <td>
-                        <p><b>Health Sciences</b></p>
+                        <p><b>Health Sciences (Session Chair: Nate Osgood)</b></p>
                         <p><b>1. A comparative study of symptom clustering on clinical and social media data</b> <br/>
                             <small>
                                 Christopher Yang, Edward Ip, Nancy Avis, Qing Ping and Ling Jiang
@@ -361,7 +361,7 @@
                     </tr>
                     <tr><td>Session 6 (SBP) <br/> 8:30am</td>
                         <td>
-                        <p><b>Military and Security</b></p>
+                        <p><b>Military and Security (Session Chair: Nitin Agarwal)</b></p>
                         <p><b>1. The influence of collaboration on research quality: social network analysis of scientific collaboration in terrorism studies research groups</b> <br/>
                             <small>
                                 Alla Khadka and Mike Byers
@@ -421,7 +421,7 @@
                     <tr>
                         <td>Session 8 (SBP) 2:00pm</td>
                         <td>
-                            <p><b>Information, Systems, and Network Science 2</b></p>
+                            <p><b>Information, Systems, and Network Science 2 (Session Chair: Chandler Johnson)</b></p>
                             <p><b>1. VIP: incorporating human cognitive biases in a probabilistic model of retweeting</b> <br/>
                                 <small>
                                     Jeonhyung Kang and Kristina Lerman
@@ -453,7 +453,7 @@
                     <tr>
                         <td>Session 9 (SBP) 3:40pm</td>
                         <td>
-                            <p><b>Information, Systems, and Network Science 3</b></p>
+                            <p><b>Information, Systems, and Network Science 3 (Session Chair: Kat Chuang)</b></p>
                             <p><b>1. Analysis of music tagging and listening patterns: do tags really function as retrieval aids?</b> <br/>
                                 <small>
                                     Jared Lorince, Kenneth Joseph and Peter Todd
