update BRiMs schedule

--- a/program/index.html
+++ b/program/index.html
@@ -168,7 +168,7 @@
                     <tr>
                         <td>Session 2 (BRiMs) <br/>11:30am</td>
                         <td>
-                        <p><b>Inference and Decision-Making</b></p>
+                        <p><b>Inference and Decision-Making (Session Chair: Bill Kennedy)</b></p>
                         <p><b>1. Malware identification using cognitive inspired inference</b> <br/>
                             <small>
                                 Robert Thomson, Christian Lebiere, Stefano Bennati, Paulo Shakarian and Eric Nunes
@@ -283,7 +283,7 @@
                     <tr>
                         <td>Session 5 (BRiMs) <br/>9:50am</td>
                         <td>
-                        <p><b>Multi-Agent Models / Social</b></p>
+                        <p><b>Multi-Agent Models / Social (Session Chair: David Reitter)</b></p>
                         <p><b>1. Cognitive leadership framework using instance-based learning</b> <br/>
                             <small>
                                 Noam Ben-Asher, Jin-Hee Cho and Adali Sibel
@@ -382,7 +382,7 @@
                     <tr>
                         <td>Session 7 (BRiMs) <br/>9:30am</td>
                         <td>
-                            <p><b>Modeling Emotion and Perception</b></p>
+                            <p><b>Modeling Emotion and Perception (Session Chair: Ariel GreenBerg)</b></p>
                             <p><b>1. Semantic labelling of objects in a simulated environment</b> <br/>
                                 <small>
                                     Ralph Brewer and Maryanne Fields
