--- a/program/posters/index.html
+++ b/program/posters/index.html
@@ -401,63 +401,70 @@
                         </p>
                         </td>
                     </tr>
-                    <tr><td>BRiMS 6</td>
+                    <tr><td>BRiMS 3</td>
+                        <p><b>Predicting trust dynamics and transfer of
+learning in games of strategic interaction 
+as a function of a player’s strategy and 
+level of trustworthiness</b><br/>Michael Collins, Ion Juvina, Gary Douglas and Kevin Gluck</p>
+                        </td>
+                    </tr>
+                    <tr><td>BRiMS 4</td>
                         <td>
                         <p><b>ACT-R modeling of password entry errors</b>
                             <br/>Kristen Greene and Franklin Tamborello
                         </p>
                         </td>
                     </tr>
-                    <tr><td>BRiMS 7</td>
+                    <tr><td>BRiMS 5</td>
                         <td>
                         <p><b>Using focus of attention for team behavior classification</b>
                             <br/>Bradley Wimpey, Craig Lennon and Maryanne Fields
                         </p>
                         </td>
                     </tr>
-                    <tr><td>BRiMS 9</td>
+                    <tr><td>BRiMS 6</td>
                         <td>
                         <p><b>Social network analysis of crowds</b>
                             <br/>Elizabeth Mezzacappa, Gordon Cooke, Kenneth Short, Charles Sheridan, Gladstone Reid, Kevin Tevis, Robert Demarco, Nasir Jaffery and John Riedener
                         </p>
                         </td>
                     </tr> 
-                    <tr><td>BRiMS 10</td>
+                    <tr><td>BRiMS 7</td>
                         <td>
                         <p><b>Introduction to dynamic network analysis</b>
                             <br/>Geoffrey Morgan, William Frankenstein and Kathleen Carley
                         </p>
                         </td>
                     </tr>
-                    <tr><td>BRiMS 11</td>
+                    <tr><td>BRiMS 8</td>
                         <td>
                         <p><b>Informing transactive memory through social cognition in agents</b>
                             <br/>Geoffrey Morgan, Kenneth Joseph and Kathleen Carley
                         </p>
                         </td>
                     </tr>
-                    <tr><td>BRiMS 12</td>
+                    <tr><td>BRiMS 9</td>
                         <td>
                         <p><b>Role of information asymmetry in a public goods game for climate change</b>
                             <br/>Medha Kumar, Rohit Chouhan and Varun Dutt
                         </p>
                         </td>
                     </tr>
-                    <tr><td>BRiMS 13</td>
+                    <tr><td>BRiMS 10</td>
                         <td>
                         <p><b>Cognitive and probabilistic models of group decision making</b>
                             <br/>Yuqing Tang, Christian Lebiere, Katia Sycara, Don Morrison and Paul Smart
                         </p>
                         </td>
                     </tr>
-                    <tr><td>BRiMS 14</td>
+                    <tr><td>BRiMS 11</td>
                         <td>
                         <p><b>Individual differences in information processing in networked decision making</b>
                             <br/>David Hughes, Sibel Adali, Jin-Hee Cho and Jennifer Mangels
                         </p>
                         </td>
                     </tr>
-                    <tr><td>BRiMS 15</td>
+                    <tr><td>BRiMS 12</td>
                         <td>
                         <p><b>Cognitively-inspired context models can improve robot and virtual agent interactive behavior</b>
                             <br/>Wayne Zachary, Travis Thomas, Andrew Rosoff, Matthew Johnson and Robert Hoffman
