link to posters page

--- a/program/index.html
+++ b/program/index.html
@@ -341,7 +341,7 @@
                     <tr>
                         <td>5:30pm</td>
                         <td>
-                        Poster Session and Reception  
+                        <a href="posters">Poster Session and Reception</a>  
                         </td>
                     </tr>
                     <tr>
